Added some improvements

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 REACT_APP_NAME="City Weather App"
+
+REACT_APP_BACKEND_BASE_URL="https://api.openweathermap.org/data/2.5"
+REACT_APP_BACKEND_API_KEY="d91fa5e792320c4bd3a18bb475e1c7ea"
