--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backbase-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://efriandika.github.io/backbase-react",
   "dependencies": {
     "@loadable/component": "^5.15.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +12,7 @@
     "axios-hooks": "^2.6.3",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
